--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,23 +18,23 @@
 
   /* Write your own custom base styles here */
   h1 {
-    @apply text-3xl font-bold md:text-5xl font-primary;
+    @apply text-3xl font-bold md:text-5xl font-firaCode;
   }
 
   h2 {
-    @apply text-2xl font-bold md:text-4xl font-primary;
+    @apply text-2xl font-bold md:text-4xl font-firaCode;
   }
 
   h3 {
-    @apply text-xl font-bold md:text-3xl font-primary;
+    @apply text-xl font-bold md:text-3xl font-firaCode;
   }
 
   h4 {
-    @apply text-lg font-bold font-primary;
+    @apply text-lg font-bold font-firaCode;
   }
 
   body {
-    @apply text-sm font-primary md:text-base;
+    @apply text-sm font-poppins md:text-base;
   }
 
   .layout {
@@ -43,5 +44,9 @@
     /* 1100px */
     max-width: 68.75rem;
     @apply w-11/12 mx-auto;
+  }
+
+  .h-screen-minus-div {
+    height: calc(100vh - 5rem);
   }
 }
